--- a/src/main/resources/templates/book-form.html
+++ b/src/main/resources/templates/book-form.html
@@ -12,8 +12,8 @@
             crossorigin="anonymous"
             />
               <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
         <link <link rel="stylesheet" th:href="@{/css/style.css}"/>
     </head>
     <body class="edit">
@@ -49,7 +49,7 @@
                 <p class="op" th:if="*{borrowedCopies!=null}"><strong> Borrowing Copies</strong> </p>
                 <div class=" mb-3 col-xl-12 "th:if="*{borrowedCopies!=null}">
                     <input class="form-control" id="copy" type="number" required th:field="*{borrowingCopies}">
-                    <div class="invalid-feedback">Amount of boroing copies is required</div>
+                    <div class="invalid-feedback">Amount of borrowing copies is required</div>
                 </div>
                 <p class="op" ><strong> Author</strong> </p>
                 <div class=" mb-3 col-xl-12 ">
